--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <link rel="stylesheet" type="text/css" href="dialog.css">
-        <meta charset="utf-8">
-        <title>Dialog Component Example</title>
-        <style type="text/css">
-            .component {
-                width: 400px;
-                height: 200px;
-                background: #ccc;
-                display: none;
-            }
+<html lang="en">
 
-            #title {
-                height: 20px;
-                background: #000;
-            }
-        </style>
-    </head>
-    <body>
-        <div role="dialog" aria-labelledby="title" aria-describedby="content">
-            <h2 id="title">I am a title</h2>
-            <p id="content">Look at me! I am content.</p>
-        </div>
-        <script type="text/javascript" src="./lib/jquery/3.2.0/jquery.min.js"></script>
-        <script type="text/javascript" src="./voltron/voltron.js"></script>
-        <script type="text/javascript" src="./jenga/jenga.js"></script>
-        <script type="text/javascript" src="./duvet/duvet.js"></script>
-        <script type="text/javascript" src="./shamen/shamen.js"></script>
-        <script type="text/javascript" src="./apache-chief/apacheChief.js"></script>
-        <script type="text/javascript" src="dialog.js"></script>
-        <script type="text/javascript">
-            (function () {
-                var dialog = new Dialog({
-                    $el: '[role="dialog"]',
-                    draggable: true,
-                    resizable: true,
-                    events: {
-                        'click [data-action]': function (e) {
-                            var action = $(e.currentTarget).attr('data-action');
-                            e.preventDefault();
-                            this[action]();
-                        }
+<head>
+    <link rel="stylesheet" type="text/css" href="dialog.css">
+    <meta charset="utf-8">
+    <title>Dialog Component Example</title>
+    <style type="text/css">
+        .component {
+            width: 400px;
+            height: 200px;
+            background: #ccc;
+            display: none;
+        }
+        
+        #title {
+            height: 20px;
+            background: #000;
+        }
+    </style>
+</head>
+
+<body>
+    <div role="dialog" aria-labelledby="title" aria-describedby="content">
+        <h2 id="title">I am a title</h2>
+        <p id="content">Look at me! I am content.</p>
+    </div>
+    <script src="./lib/jquery/3.2.0/jquery.min.js"></script>
+    <script src="./voltron/voltron.js"></script>
+    <script src="./jenga/jenga.js"></script>
+    <script src="./duvet/duvet.js"></script>
+    <script src="./shamen/shamen.js"></script>
+    <script src="./apache-chief/apacheChief.js"></script>
+    <script src="dialog.js"></script>
+    <script>
+        (function () {
+            var dialog = new Dialog({
+                $el: '[role="dialog"]',
+                draggable: true,
+                resizable: true,
+                events: {
+                    'click [data-action]': function (e) {
+                        var action = $(e.currentTarget).attr('data-action');
+                        e.preventDefault();
+                        this[action]();
                     }
-                });
+                }
+            });
 
-                dialog.show();
-            })();
-        </script>
-    </body>
+            dialog.show();
+        })();
+    </script>
+</body>
+
 </html>
