--- a/jenga/index.html
+++ b/jenga/index.html
@@ -12,7 +12,7 @@
     <div style="z-index: 20; position: relative;" id="foo"></div>
     <script src="jenga.js"></script>
     <script>
-        jenga.sendToBack(document.getElementById('foo'));
+        jenga.bringToFront(document.getElementById('foo'));
     </script>
 </body>
 
