--- a/dialog/index.html
+++ b/dialog/index.html
@@ -25,13 +25,13 @@
         <h2 id="title">I am a title</h2>
         <p id="content">Look at me! I am content.</p>
     </div>
-    <script src="./lib/jquery/1.12.4/jquery.min.js"></script>
-    <script src="./voltron/voltron.js"></script>
-    <script src="./jenga/jenga.js"></script>
-    <script src="./duvet/duvet.js"></script>
-    <script src="./shamen/shamen.js"></script>
-    <script src="./apache-chief/apacheChief.js"></script>
-    <script src="dialog.js"></script>
+    <script src="../lib/jquery/1.12.4/jquery.min.js"></script>
+    <script src="../voltron/voltron.js"></script>
+    <script src="../jenga/jenga.js"></script>
+    <script src="../duvet/duvet.js"></script>
+    <script src="../shamen/shamen.js"></script>
+    <script src="../apache-chief/apacheChief.js"></script>
+    <script src="./dialog.js"></script>
     <script>
         (function () {
             var dialog = new Dialog({
