--- a/dialog/template.html
+++ b/dialog/template.html
@@ -53,6 +53,7 @@
             }());
         </script>
     </template>
+    <script src="../templateFactory/templateFactory.js"></script>
     <script src="./DialogTemplate.js"></script>
     <script>
         (function () {
