减少文件数量，方便学习阅读

--- a/dialog/template.html
+++ b/dialog/template.html
@@ -53,8 +53,7 @@
             }());
         </script>
     </template>
-    <script src="../templateFactory/templateFactory.js"></script>
-    <script src="./DialogTemplate.js"></script>
+    <script src="./template.js"></script>
     <script>
         (function () {
             var dialog = new DialogTemplate({
